--- a/styles/main.css
+++ b/styles/main.css
@@ -5,40 +5,40 @@
     box-sizing: border-box;
 }
 
+/*TYPOGRAPHY*/
+
 body{
-    background-color: #cccccc;
-    font-family: "Open Sans", sans-serif;
-    font-size: 100%; /* 16px (12pt) default font size | 1em is 100% default font size */
-    color: #000000;
+    background-color: #676767;
+    color: #E4E0D6;
+    font-family: "Inter Tight", sans-serif;
+    font-size: 100%; 
+    min-height: 100%;
 }
 
 h1{
+    font-size: 2.25em; 
+    font-weight: bolder;
     padding-bottom: 10px;
-    font-size: 2.25em; /* 36px / 16px = 2.25em or 225%  */
-    font-weight: normal;
 }
 
 h2{
-    padding-bottom: 10px;
-    font-size: 2.125em; /* 34px */
-    font-weight: normal;
+    font-size: 2em; 
+    font-weight: bold;
+    text-align: center;
 }
 
 h3{
-    padding-bottom: 10px;
-    font-size: 2em; /* 32px */
-    font-weight: normal;
+    font-size: 1em; 
+    font-weight: bold;
 }
 
 p{
-    padding-bottom: 10px;
     line-height: 1.2;
+    padding-bottom: 10px;
 }
 
-/* ul{
-    padding-left: 40px;
-    margin-bottom: 16px;
-} */
+
+/*TYPOGRAPHY*/
 
 img{
     max-width: 100%;
@@ -46,7 +46,7 @@ img{
 }
 
 .container{
-    background-color: #ffffff;
+    background-color: #100100;
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
@@ -56,75 +56,244 @@ img{
 }
 
 header{
-    /* background-color: palevioletred; */
-    flex: 1 0 100%;
-    height: 200px;
-    background-image: url(../images/header-desktop.png);
+    flex: 1 0 100%; 
+    height: 75px;
+    background-color: #100100;
+}
+
+header img{
+    margin-left: 50px;
+    margin-bottom: 20px;
+    align-items: center;
 }
 
 nav{
-    background-color: paleturquoise;
+    background-color: #100100;
     flex: 1 0 100%;
+    padding-bottom: 7px;
 }
 
 nav ul{
     list-style-type: none;
-    display: flex;
-    justify-content: center;
-    padding: 10px;
-    /* margin-bottom: 0; */
+    display: flex; 
+    justify-content: left;
+    padding-left: 50px;
+    gap: 25px;
+    font-size: 2em;
+    font-weight: bolder;
 }
 
 nav a:link, nav a:visited{
-    background-color: #757575;
     text-decoration: none;
-    color: #fff;
-    /* width: 150px; */
-    display: block;
-    padding: 5px 10px;
-    margin-right: 10px;
-    border-radius: 5px;
+    color: #E4E0D6; 
+    display: block; 
 }
 
+
 nav a:hover, nav:active{
-    background-color: #333;
+    color: violet
 }
 
 
 main{
-    background-color: palegreen;
-    flex: 1 1 70%; /* 800px - target / context = result */
-    padding: 5px 10px;
+    background-color: #100100;
+    flex: 1 1 70%; 
+    padding: 25px 10px 5px 50px;
+    max-width: 600px;
+    margin: 0 auto;
+    min-height: 800px;
 }
 
-main h1{
-    color: red;
-}
 
-aside{
-    background-color: palegoldenrod;
-    flex: 1 1 30%; /* 400px - target / context (1200) = result */
-    padding: 5px 10px;
-}
+
+/*Index/About Page*/
+
+    main h1{
+        color: #E4E0D6;
+        margin-top: 25px;
+        margin-bottom: 25px;
+        margin-left: 50px;
+    }
+
+    .paragraph-index {
+        font-weight: normal;
+        line-height: 160%;
+        font-size: 1.5em;
+        margin-left: 50px;
+        margin-bottom: 5px;
+    }
+
+    aside {
+        background-color: #100100;
+        flex: 1 1 30%; 
+        padding: 25px 20px 15px 30px;
+        margin-right: 50px;
+        justify-content: center;
+    }
+
+    aside img {
+        border-radius: 10%;
+    }
+
+
+
+/*Contact Page*/
+
+    .main contact {
+        align-items: center;
+        justify-items: center;
+    }
+
+    .paragraph-contact {
+        font-weight: normal;
+        line-height: 250%;
+        padding-top: 50px;
+        font-size: 1.25em;
+        text-align: center;
+    }
+
+    .underline {
+        text-decoration: underline;
+        text-underline-offset: 9px;
+        text-decoration-thickness: 1px;
+    }
+
+    .social-links {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        justify-items: center;
+        margin-top: 50px;
+    }
+
+    .social-links img {
+        width: 50px;
+        height: auto;
+    }
+
+
+
+/*Portfolio Page*/
+
+    .main portfolio {
+        align-items: center;
+        justify-content: center;
+        justify-items: center;
+
+    }
+
+    .pf-grid {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 40px;
+        margin: 0 auto;
+        align-items: center;
+        justify-items: center;
+        padding-top: 25px;
+    }
+
+    .square {
+        aspect-ratio: 1/1;
+        background-color: #E4E0D6;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        max-width: 100%;
+        border-radius: 17%;
+    }
+
+    .square img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        padding: 25px;
+    }
+
+    .pf-item {
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .pf-caption {
+        margin-top: 30px;
+        font-size: 1em;
+        color: #E4E0D6;
+        font-weight: bold;
+    }
+
+
+
+
+/*Portfolio Examples, the same for all three examples */
+
+    .pf-example {
+        display: flex;
+        justify-content: center;
+        gap: 40px;
+        margin-top: 25px;
+    }
+
+    .pf-example img {
+        width: 50%;
+        height: auto;
+        border-radius: 8px;
+        object-fit: contain;
+    }
+
+    .text-columns {
+        display: flex;
+        justify-content: center;
+        gap: 60px;
+        padding: 40px 5px;
+        max-width: 1200px;
+        margin: 0;
+    }
+
+    .column {
+        flex: 1;
+        max-width: 800px;
+    }
+
+    .column h3 {
+        margin-bottom: 1em;
+    }
+
+    .column p {
+        line-height: 150%;
+        margin-bottom: 1em;
+        font-size: 0.5em;
+    }
+
+
 
 footer{
-    background-color: lavender;
+    background-color: #100100;
     flex: 1 0 100%;
     padding: 10px;
 }
+
+
+
+
+
+
+
+
 
 
 /* media queries for tablet screens 800px or smaller */
 @media screen and (max-width: 800px){
 
     body{
-        background-color: #333;
+        background-color: #100100;
     }
 
     header{
         
         height: 100px;
-        background-image: url(../images/header-tablet.png);
+        background-color: #100100;
     }
 
     nav a:link, nav a:visited{
@@ -144,19 +313,21 @@ aside{
 
 }
 
+
+
 } 
 
 /* media queries for mobile screens 600px or smaller */
 @media screen and (max-width: 600px){
 
     body{
-        background-color: yellow;
+        background-color: #100100;
     }
 
     header{
         
         height: 50px;
-        background-image: url(../images/header-mobile.png);
+        background-color: #100100;
         
     }
 
